# fluxconf

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  SConstruct  TODO  aclocal.m4  configure  configure.in  mkinstalldirs
autom4te.cache/: output.0  output.1  traces.0  traces.1
docs/: Makefile  Makefile.am  Makefile.in  index.html
po/: Makefile  Makefile.am  Makefile.in  fi.mo  fi.po  fluxconf.pot  fr.mo  fr.po
src/: Makefile  Makefile.am  Makefile.in  SConscript  actions.c  fluxbare.c  fluxconf.c  fluxkeys.c  fluxmenu.c  tags
src/.deps/: fluxconf-actions.Po  fluxconf-fluxbare.Po  fluxconf-fluxconf.Po  fluxconf-fluxkeys.Po  fluxconf-fluxmenu.Po
src/include/: defines.h  functions.h  globals.h  structures.h
src/xpm/: dalogo.h  fc_conf.xpm  fc_keys.xpm  fc_menu.xpm
